<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                tools:context=".DeviceFragment">
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">
        <RelativeLayout android:layout_width="match_parent"
                        android:paddingBottom="15dp"
                        android:layout_height="wrap_content">
            <View android:layout_width="match_parent"
                  android:id="@+id/image"
                  android:scaleType="centerInside"
                  android:layout_height="230dp"/>
            <TextView android:layout_width="wrap_content"
                      android:id="@+id/title"
                      android:layout_below="@+id/image"
                      android:gravity="center"
                      android:textSize="18sp"
                      android:textColor="@android:color/black"
                      android:layout_marginTop="10dp"
                      android:layout_centerHorizontal="true"
                      android:layout_height="wrap_content"/>

            <View android:layout_width="match_parent"
                  android:id="@+id/separator"
                  android:layout_marginTop="10dp"
                  android:layout_below="@+id/title"
                  android:background="@android:color/darker_gray"
                  android:layout_height="1dp"/>

            <TextView android:layout_width="match_parent"
                      android:id="@+id/bioButton"
                      android:gravity="center_vertical"
                      android:paddingLeft="15dp"
                      android:layout_below="@id/separator"
                      android:layout_marginLeft="15dp"
                      android:layout_marginTop="15dp"
                      android:clickable="true"
                      android:layout_marginRight="15dp"
                      android:background="@drawable/button_bg_selector"
                      android:text="@string/bio"
                      android:textSize="18dp"
                      android:layout_height="40dp"/>

            <ImageView android:layout_width="wrap_content"
                       android:layout_below="@id/separator"
                       android:layout_alignParentRight="true"
                       android:id="@+id/bioButtonArrow"
                       android:layout_marginTop="25dp"
                       android:layout_marginRight="35dp"
                       android:src="@drawable/vertical_arrow"
                       android:layout_height="wrap_content"/>

            <RelativeLayout android:layout_width="wrap_content"
                            android:id="@+id/bioChoice"
                            android:visibility="gone"
                            android:layout_below="@id/bioButton"
                            android:layout_marginLeft="35dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginRight="35dp"
                            android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent"
                          android:id="@+id/bioChoiceText"
                          android:layout_height="wrap_content"/>
            </RelativeLayout>

            <TextView android:layout_width="match_parent"
                      android:id="@+id/projectsButton"
                      android:gravity="center_vertical"
                      android:paddingLeft="15dp"
                      android:layout_below="@id/bioChoice"
                      android:layout_marginLeft="15dp"
                      android:layout_marginTop="15dp"
                      android:layout_marginRight="15dp"
                      android:clickable="true"
                      android:background="@drawable/button_bg_selector"
                      android:text="@string/projects"
                      android:textSize="18dp"
                      android:layout_height="40dp"/>

            <ImageView android:layout_width="wrap_content"
                       android:layout_below="@id/bioChoice"
                       android:layout_alignParentRight="true"
                       android:id="@+id/projectsArrow"
                       android:layout_marginTop="25dp"
                       android:layout_marginRight="35dp"
                       android:src="@drawable/vertical_arrow"
                       android:layout_height="wrap_content"/>



            <TextView android:layout_width="match_parent"
                      android:id="@+id/contactsButton"
                      android:gravity="center_vertical"
                      android:paddingLeft="15dp"
                      android:layout_below="@id/projectsButton"
                      android:layout_marginLeft="15dp"
                      android:layout_marginTop="15dp"
                      android:layout_marginRight="15dp"
                      android:clickable="true"
                      android:background="@drawable/button_bg_selector"
                      android:text="@string/contacts"
                      android:textSize="18dp"
                      android:layout_height="40dp"/>

            <ImageView android:layout_width="wrap_content"
                       android:layout_below="@id/projectsButton"
                       android:layout_alignParentRight="true"
                       android:id="@+id/contactsButtonArrow"
                       android:layout_marginTop="25dp"
                       android:layout_marginRight="35dp"
                       android:src="@drawable/vertical_arrow"
                       android:layout_height="wrap_content"/>

            <RelativeLayout android:layout_width="wrap_content"
                            android:id="@+id/contactsChoice"
                            android:visibility="gone"
                            android:layout_below="@id/contactsButton"
                            android:layout_marginLeft="35dp"
                            android:layout_marginTop="15dp"
                            android:layout_marginRight="35dp"
                            android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent"
                          android:id="@+id/contactsChoiceText"
                          android:autoLink="web"
                          android:linksClickable="true"
                          android:layout_height="wrap_content"/>

                <Button android:layout_width="match_parent"
                        android:layout_below="@id/contactsChoiceText"
                        android:layout_marginTop="15dp"
                        android:text="@string/ask"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textSize="18dp"
                        android:background="@drawable/take_bg_selector"
                        android:layout_height="40dp"/>
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>